--- a/public/css/ababu.css
+++ b/public/css/ababu.css
@@ -1,5 +1,5 @@
-fieldset{
-    border: thin solid black; 
+fieldset {
+    border: thin solid black;
     padding: 7px;
 }
 
@@ -11,6 +11,28 @@ legend {
     padding: 7px;
 }
 
-select+.select2-container {
+select + .select2-container {
     width: 100% !important;
 }
+
+input:required {
+    border: 1px dashed red;
+}
+
+
+/*
+input {
+    background: #ddd;
+    width: 200px;
+    transition: width .3s ease-in-out;
+    -webkit-transition: width .3s ease-in-out;
+    -moz-transition: width .3s ease-in-out;
+    -ms-transition: width .3s ease-in-out;
+}
+
+input:focus {
+    background: #ddd;
+    width: 250px;
+    color: black;
+}
+*/
