--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -29,3 +29,35 @@ input:required {
     border-left: 3px solid orangered;
 }
 */
+
+
+.colors ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.colors li {
+    display: inline;
+}
+
+.colors label {
+    cursor: pointer;
+}
+
+.colors input {
+    display: none;
+}
+
+.colors input[type="radio"]:checked+.swatch {
+    box-shadow: inset 0 0 0 2px white;
+}
+
+.swatch {
+    display: inline-block;
+    vertical-align: middle;
+    height: 16px;
+    width: 16px;
+    border: 1px solid #d4d4d4;
+    border-radius: 50%;
+}
